<resources>
    <string name="app_name">Spinner</string>
    <string name="settings">settings</string>
    <string name="accountname">accountName</string>
    <string name="notificationtoggle">notificationToggle</string>
    <string name="notificationtype">notificationType</string>
    <string name="communicationmode">communicationMode</string>
    <string name="defaultpaymentoption">defaultPaymentOption</string>
    <string name="pricedroppercent">priceDropPercent</string>
    <string name="showproductreviews">showProductReviews</string>
    <string name="promonotification">promoNotification</string>
    <string name="sms">sms</string>
    <string name="email">email</string>

    <array name="payment_options">
        <item>Cash</item>
        <item>NetBanking</item>
        <item>UPI</item>

    </array>
</resources>
