<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View" />
        <variable name="accountSettings" type="com.example.spinner.twoway.AccountSetting"/>
        <variable name="eventListener" type="com.example.spinner.twoway.SettingsEventListener"/>
        <variable name="spinAdapter" type="android.widget.ArrayAdapter"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        >
        <TextView
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/account_name_l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accountname"
            app:layout_constraintBaseline_toBaselineOf="@+id/account_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/account_name" />
        <EditText
            android:id="@+id/account_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="account name"
            android:text="@={accountSettings.accountName}"
            app:layout_constraintLeft_toRightOf="@+id/account_name_l"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings" />
        <TextView
            android:id="@+id/notifications_toggle_l"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notificationtoggle"
            app:layout_constraintBaseline_toBaselineOf="@+id/notifications"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/notifications" />
        <ToggleButton
            android:id="@+id/notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="@={accountSettings.notifications}"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toRightOf="@+id/notifications_toggle_l"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/account_name" />

        <TextView
            android:id="@+id/notification_types_l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/notificationtype"
            app:layout_constraintHorizontal_bias="0.199"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notifications_toggle_l" />
        <CheckBox
            android:id="@+id/deals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Deals"
            android:checked="@={accountSettings.deals}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/promos"
            app:layout_constraintTop_toBottomOf="@+id/notification_types_l" />
        <CheckBox
            android:id="@+id/promos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Promos"
            android:checked="@={accountSettings.promos}"
            app:layout_constraintLeft_toRightOf="@+id/deals"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notification_types_l" />
        <TextView
            android:id="@+id/communication_mode_l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/communicationmode"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/communication_mode"
            app:layout_constraintTop_toBottomOf="@+id/promos" />
        <RadioGroup
            android:id="@+id/communication_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toRightOf="@+id/communication_mode_l"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/promos">
            <RadioButton
                android:id="@+id/emailOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{accountSettings.communicationMode.equals(@string/email)}"
                android:onClick="@{() -> eventListener.onCommunicationMode(@string/email)}"
                android:text="email" />
            <RadioButton
                android:id="@+id/smsOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{accountSettings.communicationMode.equals(@string/sms)}"
                android:onClick="@{() -> eventListener.onCommunicationMode(@string/sms)}"
                android:text="SMS" />
        </RadioGroup>
        <TextView
            android:id="@+id/default_payment_option_l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/defaultpaymentoption"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/default_payment_option"
            app:layout_constraintTop_toBottomOf="@+id/communication_mode" />
        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/default_payment_option"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            bind:pmtOpt="@={accountSettings.defaultPaymentOption}"
            app:adapter="@{spinAdapter}"
            app:layout_constraintLeft_toRightOf="@+id/default_payment_option_l"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/communication_mode" />
        <TextView
            android:id="@+id/price_drop_percent_l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/pricedroppercent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/price_drop_percent"
            app:layout_constraintTop_toBottomOf="@+id/default_payment_option" />
        <SeekBar
            android:id="@+id/price_drop_percent"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:min="5"
            android:max="80"
            android:progress="@={accountSettings.priceDropPercent}"
            app:layout_constraintLeft_toRightOf="@+id/price_drop_percent_l"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/default_payment_option" />
        <TextView
            android:id="@+id/show_product_reviews_l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/showproductreviews"
            app:layout_constraintHorizontal_bias="0.158"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/price_drop_percent_l" />
        <RatingBar
            android:id="@+id/show_product_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:rating="@={accountSettings.showProductReviews}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/show_product_reviews_l" />
        <TextView
            android:id="@+id/promo_notification_l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/promonotification"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/promo_notification"
            app:layout_constraintTop_toBottomOf="@+id/show_product_reviews" />
        <Switch
            android:id="@+id/promo_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:checked="@={accountSettings.promoNotification}"
            app:layout_constraintLeft_toRightOf="@+id/promo_notification_l"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/show_product_reviews" />
        <Button
            android:id="@+id/save_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save Settings"
            android:onClick="@{(v) -> eventListener.onClickSaveSettings(v)}"
            style="@style/Widget.AppCompat.Button.Colored"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/promo_notification" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>